# django-todo-project

./: .gitignore  README.md  render.yaml  requirements.txt
docs/: README.md
todo_manager/: db.json  pyproject.toml  render.yaml  requirements.txt
todo_manager/balance/: urls.py  views.py
todo_manager/chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
todo_manager/chat/migrations/: 0001_initial.py  0002_message_comment_message_price.py
todo_manager/notifications/: admin.py  context_processors.py  models.py  urls.py  views.py
todo_manager/notifications/migrations/: 0001_initial.py  0002_notification_order.py  0003_alter_notification_options_notification_url.py
todo_manager/order_files/: Razrabotka_strategicheskogo_videniia_obespecheniia_ekonomicheskoi_bezopasnosti.docx
todo_manager/orders/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
todo_manager/orders/migrations/: 0001_initial.py  0002_remove_order_slug.py  0003_alter_order_customer_alter_order_type_of_work.py  0004_bid.py  0005_alter_bid_order_alter_order_status.py  0006_alter_bid_comment.py  0007_alter_bid_order.py
todo_manager/poetry-todo-manager/: pyproject.toml
todo_manager/reviews/: urls.py  views.py
todo_manager/staticfiles/css/: styles_index.css
todo_manager/templates/: base.html  index.html
todo_manager/templates/components/: dropdown_user.html  footer.html  navbar.html
todo_manager/todo_manager/: asgi.py  context_processors.py  settings.py  urls.py
todo_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
(+43 files in other folders)
