[project]
name = "poetry-todo-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Vano",email = "glazglojon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry_todo_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
